# machine-learning-portfolio

./: .gitignore  README.md  pyproject.toml
computer_vision/notebook/: cifr.ipynb  emotions.ipynb
computer_vision/src/: BaseCNN.py  baseline.py  figures.py  helper.py  train_model.py  transforms.py  utils.py
computer_vision/src/api/: app.py  config.yaml  load_model.py  transforms.py
notebooks/computer_vision/: cifr.ipynb  emotions.ipynb  emotions_camera.ipynb
notebooks/nlp/: 01_tfidf_baseline.ipynb  02_tfidf_pipeline.ipynb  03_word2vec.ipynb  04_embeddings_pipeline.ipynb  05_lstm.ipynb  06_rnn_pipeline.ipynb
notebooks/reinforcement_learning/: qlearningplayer.ipynb  realplayer.ipynb
src/computer_vision/: Dockerfile  README.md
src/computer_vision/api/: app.py  load_model.py
src/computer_vision/data/: transforms.py
src/computer_vision/models/: BaseCNN.py  baseline.py
src/computer_vision/training/: train_model.py
src/computer_vision/utils/: figures.py  helper.py
src/nlp/: evaluation.py  models.py  vectorizers.py
src/nlp/data/: preprocessing.py
src/nlp/evaluation/: metrics.py
src/nlp/features/: embeddings.py  rnn_dataset.py  tfidf.py
src/nlp/models/: linear.py  naive_bayes.py  rnn_model.py
src/nlp/pipelines/: embedding_pipeline.py  rnn_pipeline.py  rnn_trainer.py  tfidf_pipeline.py
src/reinforcement_learning/Players/: Player.py  RealPlayer.py
src/reinforcement_learning/game/: Game.py  Party.py
src/reinforcement_learning/players/: Player.py  QLearningPlayer.py  RandomPlayer.py  RealPlayer.py
src/utils/: helper.py
tests/: test_vectorizers.py
tests/computer_vision/: computer_vision_test.py
tests/reinforcement_learning/: game_test.py
utils/: BaseCNN.py  helper.py  mlflow.py
