[project]
name = "aiprojects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "mlflow>=3.8.1",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "skorch>=1.3.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.setuptools.packages.find]
include = [
    "nlp",
    "classical_ml",
    "computer_vision",
    "recommender_systems",
]
