[project]
name = "aiprojects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.7",
    "mlflow>=3.8.1",
    "notebook>=7.5.2",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "skorch>=1.3.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
torchaudio = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[pytest]
pythonpath = ["src", "tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
